Join quiz start with InvitePage
